maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:19: error: only classes can have declared but undefined members
  def marquerCasesAdjacentes(i:Int)
      ^